Started adding images. didn't really work out well right now

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   </head>
   <body>
     
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img align="center" src="img/q4eu8h8q5az3jyeeu7eant068.gif" alt="logo" height="250" width="1250">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <img align="center" src="img/MET-HOF-0186-0001-01-1024x899.jpeg" alt="world series" height="150" width="250"> 
+            </div>
+        </div>
+        
+
+
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
   </body>
