Made the images into buttons, still have to align the buttons evenly

--- a/index.html
+++ b/index.html
@@ -18,13 +18,32 @@
 
         <div class="row">
             <div class="col">
-                <img align="center" src="img/MET-HOF-0186-0001-01-1024x899.jpeg" alt="world series" height="150" width="250"> 
-            </div>
+              <button>
+                <img src="img/MET-HOF-0186-0001-01-1024x899.jpeg" alt="world series" hieght="250" width="300">
+              </button>
+
+              <button>
+                <img src="img/retired-numbersjpg-d96742c3520b83ae.jpg" alt="numbers" hieght="250" width="300">
+              </button>
+
+          <button>
+            <img src="img/MET-HOF-0037-0001-01-1024x394.jpeg" alt="pennant" hieght="250" width="300">
+          </button>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+        <button>
+          <img src="img/adxgdjgvfmo3euwruugb.jpg" alt="museum" hieght="250" width="300">
+        </button>
+
+      <button align="right">
+        <img src="img/New York Mets 1200.jpg" alt="Mets" hieght="250" width="300">
+      </button>
+    </div>
+</div>
         
-
-
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
