aligned the images, and added the headings to what image means

--- a/index.html
+++ b/index.html
@@ -12,37 +12,43 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img align="center" src="img/q4eu8h8q5az3jyeeu7eant068.gif" alt="logo" height="250" width="1250">
+                <img align="center" src="img/q4eu8h8q5az3jyeeu7eant068.gif" alt="logo" height="250" width="1350">
             </div>
         </div>
 
-        <div class="row">
-            <div class="col">
+        <div class="d-flex justify-content-center align-items row"> 
+            <div class="d-flex justify-content-center align-items col">
               <button>
                 <img src="img/MET-HOF-0186-0001-01-1024x899.jpeg" alt="world series" hieght="250" width="300">
+                <h3>World Series Wins</h3>
               </button>
 
               <button>
                 <img src="img/retired-numbersjpg-d96742c3520b83ae.jpg" alt="numbers" hieght="250" width="300">
+                <h3>Retired Mets Numbers</h3>
               </button>
 
           <button>
             <img src="img/MET-HOF-0037-0001-01-1024x394.jpeg" alt="pennant" hieght="250" width="300">
+            <h3>Pennants won</h3>
           </button>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
+      <div class="d-flex justify-content-center align-items row">
+        <div class="d-flex justify-content-center align-items col">
         <button>
           <img src="img/adxgdjgvfmo3euwruugb.jpg" alt="museum" hieght="250" width="300">
+          <h3>Mets Hall of Fame</h3>
         </button>
 
-      <button align="right">
+      <button>
         <img src="img/New York Mets 1200.jpg" alt="Mets" hieght="250" width="300">
+        <h3>Mets Historical Moments</h3>
       </button>
     </div>
 </div>
+
         
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
