Started the javascript part

--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 
         <div class="d-flex justify-content-center align-items row"> 
             <div class="d-flex justify-content-center align-items col">
-              <button>
+              <button onclick="changeParagraph1()">
                 <img src="img/MET-HOF-0186-0001-01-1024x899.jpeg" alt="world series" hieght="250" width="300">
                 <h3>World Series Wins</h3>
               </button>
 
-              <button>
+              <button oncontextmenu="changeParagraph2()">
                 <img src="img/retired-numbersjpg-d96742c3520b83ae.jpg" alt="numbers" hieght="250" width="300">
                 <h3>Retired Mets Numbers</h3>
               </button>
 
-          <button>
+          <button ondblclick="changeParagraph3()">
             <img src="img/MET-HOF-0037-0001-01-1024x394.jpeg" alt="pennant" hieght="250" width="300">
-            <h3>Pennants won</h3>
+            <h3>Pennants Won</h3>
           </button>
         </div>
       </div>
 
       <div class="d-flex justify-content-center align-items row">
         <div class="d-flex justify-content-center align-items col">
-        <button>
+        <button onmouseenter="changeParagraph4()">
           <img src="img/adxgdjgvfmo3euwruugb.jpg" alt="museum" hieght="250" width="300">
           <h3>Mets Hall of Fame</h3>
         </button>
 
-      <button>
+      <button onmouseover="changeParagraph5()">
         <img src="img/New York Mets 1200.jpg" alt="Mets" hieght="250" width="300">
         <h3>Mets Historical Moments</h3>
       </button>
