Finished the javascript, only wanna make a few more adjustments to the website

--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
               <button onclick="changeParagraph1()">
                 <img src="img/MET-HOF-0186-0001-01-1024x899.jpeg" alt="world series" hieght="250" width="300">
                 <h3>World Series Wins</h3>
+                <p id="paragraphchange1"></p>
               </button>
 
               <button oncontextmenu="changeParagraph2()">
                 <img src="img/retired-numbersjpg-d96742c3520b83ae.jpg" alt="numbers" hieght="250" width="300">
                 <h3>Retired Mets Numbers</h3>
+                <p id="paragraphchange2"></p>
               </button>
 
           <button ondblclick="changeParagraph3()">
             <img src="img/MET-HOF-0037-0001-01-1024x394.jpeg" alt="pennant" hieght="250" width="300">
             <h3>Pennants Won</h3>
+            <p id="paragraphchange3"></p>
           </button>
         </div>
       </div>
@@ -40,11 +43,13 @@
         <button onmouseenter="changeParagraph4()">
           <img src="img/adxgdjgvfmo3euwruugb.jpg" alt="museum" hieght="250" width="300">
           <h3>Mets Hall of Fame</h3>
+          <p id="paragraphchange4"></p>
         </button>
 
       <button onmouseover="changeParagraph5()">
         <img src="img/New York Mets 1200.jpg" alt="Mets" hieght="250" width="300">
         <h3>Mets Historical Moments</h3>
+        <p id="paragraphchange5"></p>
       </button>
     </div>
 </div>
